syntax="proto3";

package groupcachepb;

// 相对于 proto 文件来说的路径
option go_package = ".";

message GetRequest {
    string group = 1;
    string key = 2;
}

message GetResponse {
    bytes value = 1;
}

service GroupCache {
    rpc Get(GetRequest) returns (GetResponse);
}